; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/bfa/extr_bfad.c_bfad_init_timer.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/bfa/extr_bfad.c_bfad_init_timer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bfad_s = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i64, i32 }

@bfad_bfa_tmo = common dso_local global i32 0, align 4
@jiffies = common dso_local global i64 0, align 8
@BFA_TIMER_FREQ = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bfad_init_timer(%struct.bfad_s* %0) #0 {
  %2 = alloca %struct.bfad_s*, align 8
  store %struct.bfad_s* %0, %struct.bfad_s** %2, align 8
  %3 = load %struct.bfad_s*, %struct.bfad_s** %2, align 8
  %4 = getelementptr inbounds %struct.bfad_s, %struct.bfad_s* %3, i32 0, i32 0
  %5 = call i32 @init_timer(%struct.TYPE_3__* %4)
  %6 = load i32, i32* @bfad_bfa_tmo, align 4
  %7 = load %struct.bfad_s*, %struct.bfad_s** %2, align 8
  %8 = getelementptr inbounds %struct.bfad_s, %struct.bfad_s* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 1
  store i32 %6, i32* %9, align 8
  %10 = load %struct.bfad_s*, %struct.bfad_s** %2, align 8
  %11 = ptrtoint %struct.bfad_s* %10 to i64
  %12 = load %struct.bfad_s*, %struct.bfad_s** %2, align 8
  %13 = getelementptr inbounds %struct.bfad_s, %struct.bfad_s* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  store i64 %11, i64* %14, align 8
  %15 = load %struct.bfad_s*, %struct.bfad_s** %2, align 8
  %16 = getelementptr inbounds %struct.bfad_s, %struct.bfad_s* %15, i32 0, i32 0
  %17 = load i64, i64* @jiffies, align 8
  %18 = load i32, i32* @BFA_TIMER_FREQ, align 4
  %19 = call i64 @msecs_to_jiffies(i32 %18)
  %20 = add nsw i64 %17, %19
  %21 = call i32 @mod_timer(%struct.TYPE_3__* %16, i64 %20)
  ret void
}

declare dso_local i32 @init_timer(%struct.TYPE_3__*) #1

declare dso_local i32 @mod_timer(%struct.TYPE_3__*, i64) #1

declare dso_local i64 @msecs_to_jiffies(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
